--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(duktape)
 
 set(TOP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/)
 set(DUKTAPE_DIR ${TOP_DIR}/duktape-2.3.0)
-set(DUKTAPE_SRC_DIR ${DUKTAPE_DIR}/src-noline)
+set(DUKTAPE_SRC_DIR ${DUKTAPE_DIR}/src-custom)
 
 include_directories(${DUKTAPE_SRC_DIR})
 aux_source_directory(${DUKTAPE_SRC_DIR} DUKTAPE_SRCS)
