--- a/unity/.vscode/settings.json
+++ b/unity/.vscode/settings.json
@@ -3,8 +3,8 @@
     {
         "**/.DS_Store":true,
         "**/.git":true,
-        "**/.gitignore":true,
-        "**/.gitmodules":true,
+        // "**/.gitignore":true,
+        // "**/.gitmodules":true,
         "**/*.booproj":true,
         "**/*.pidb":true,
         "**/*.suo":true,
