--- a/unity/tsconfig.json
+++ b/unity/tsconfig.json
@@ -4,7 +4,15 @@
         "target": "es5",
         "sourceRoot": "Assets/Scripts",
         "outDir": "Assets/Generated",
+        "typeRoots": [
+            "Assets/**/Typings"
+        ],
+        // "listEmittedFiles": true,
         "noImplicitAny": false,
+        "allowJs": false,
         "sourceMap": true
-    }
+    }, 
+    "exclude": [
+        "Assets/Generated/**/*"
+    ]
 }
