加入nodejs风格的模块加载, 实现简单路径解析

--- a/duktape-2.3.0/src-input/duktape.h.in
+++ b/duktape-2.3.0/src-input/duktape.h.in
@@ -1278,6 +1278,13 @@ DUK_EXTERNAL_DECL const void * const duk_rom_compressed_pointers[];
 #endif
 
 /*
+ * extra: module-node
+ */
+
+DUK_EXTERNAL_DECL duk_ret_t duk_module_node_peval_main(duk_context *ctx, const char *path);
+DUK_EXTERNAL_DECL void duk_module_node_init(duk_context *ctx);
+
+/*
  *  C++ name mangling
  */
 
