测试导出类的继承

--- a/unity/tsconfig.json
+++ b/unity/tsconfig.json
@@ -5,7 +5,8 @@
         "sourceRoot": "Assets/Scripts/Source",
         "outDir": "Assets/Scripts/Generated",
         "typeRoots": [
-            "Assets/**/Typings"
+            "Assets/Duktape/Typings",
+            "Assets/Scripts/Typings"
         ],
         "moduleResolution": "node",
         "types": [
