make duktape.bundle for macos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.0)
 project(duktape)
 
 set(TOP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/)
@@ -8,4 +8,17 @@ set(DUKTAPE_SRC_DIR ${DUKTAPE_DIR}/src-custom)
 include_directories(${DUKTAPE_SRC_DIR})
 aux_source_directory(${DUKTAPE_SRC_DIR} DUKTAPE_SRCS)
 
-add_library(duktape SHARED ${DUKTAPE_SRCS})
+if (APPLE) 
+    if (IOS)
+        add_library(duktape STATIC ${DUKTAPE_SRCS})
+        set(CMAKE_OSX_ARCHITECTURES "$(ARCHS_STANDARD)")
+        set_property(TARGET duktape PROPERTY XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "7.0")
+    else ()
+        add_library(duktape MODULE ${DUKTAPE_SRCS})
+        set(CMAKE_OSX_ARCHITECTURES "$(ARCHS_STANDARD_64_BIT)")
+        set_target_properties(duktape PROPERTIES MACOSX_BUNDLE TRUE)
+        set_target_properties(duktape PROPERTIES BUNDLE TRUE)
+    endif ()
+else ()
+    add_library(duktape SHARED ${DUKTAPE_SRCS})
+endif ()
