--- a/unity/.vscode/settings.json
+++ b/unity/.vscode/settings.json
@@ -49,7 +49,7 @@
         "library/":true,
         "obj/":true,
         "Obj/":true,
-        "ProjectSettings/":true,
+        "ProjectSettings/":false,
         "temp/":true,
         "Temp/":true
     }
