--- a/unity/.gitignore
+++ b/unity/.gitignore
@@ -1,5 +1,9 @@
 Assets/StreamingAssets/AssetBundles/
 Assets/StreamingAssets/AssetBundles.meta
+/Assets/Source/Generated/*.txt.meta
+/Assets/Duktape/Generated/*.txt.meta
+/Assets/Source/Generated/*.txt
+/Assets/Duktape/Generated/*.txt
 
 AssetBundles/
 /Library/
