--- a/duktape-2.3.0/src-input/duktape.h.in
+++ b/duktape-2.3.0/src-input/duktape.h.in
@@ -1347,6 +1347,9 @@ DUK_EXTERNAL_DECL duk_uint_t duk_unity_ref(duk_context *ctx); /// Creates and re
 DUK_EXTERNAL_DECL void duk_unity_unref(duk_context *ctx, duk_uint_t refid); /// push object referenced by refid to top of the stack
 DUK_EXTERNAL_DECL void duk_unity_getref(duk_context *ctx, duk_uint_t refid); /// Releases reference refid
 
+DUK_EXTERNAL_DECL void *duk_unity_push_buffer_raw(duk_context *ctx, duk_uint_t size, duk_small_uint_t flags);
+DUK_EXTERNAL_DECL void duk_unity_push_buffer_object(duk_context *ctx, duk_idx_t idx_buffer, duk_uint_t byte_offset, duk_uint_t byte_length, duk_uint_t flags);
+
 /*
  *  C++ name mangling
  */
