--- a/duktape-2.3.0/src-input/duktape.h.in
+++ b/duktape-2.3.0/src-input/duktape.h.in
@@ -1350,6 +1350,8 @@ DUK_EXTERNAL_DECL void duk_unity_getref(duk_context *ctx, duk_uint_t refid); ///
 DUK_EXTERNAL_DECL void *duk_unity_push_buffer_raw(duk_context *ctx, duk_uint_t size, duk_small_uint_t flags);
 DUK_EXTERNAL_DECL void duk_unity_push_buffer_object(duk_context *ctx, duk_idx_t idx_buffer, duk_uint_t byte_offset, duk_uint_t byte_length, duk_uint_t flags);
 
+DUK_EXTERNAL_DECL duk_idx_t duk_unity_push_error_object_raw(duk_context *ctx, duk_errcode_t err_code, const char *filename, duk_int_t line, const char *fmt);
+
 /*
  *  C++ name mangling
  */
