--- a/duktape-2.3.0/src-input/duktape.h.in
+++ b/duktape-2.3.0/src-input/duktape.h.in
@@ -1356,16 +1356,24 @@ DUK_EXTERNAL_DECL duk_idx_t duk_unity_push_error_object_raw(duk_context *ctx, du
  * debugger supported
  */
 
-DUK_EXTERNAL_DECL void duk_unity_attch_debugger(duk_context *ctx);
+typedef duk_uint_t (*duk_unity_debug_read_function) (duk_int_t udata, char *buffer, duk_uint_t length);
+typedef duk_uint_t (*duk_unity_debug_write_function) (duk_int_t udata, const char *buffer, duk_uint_t length);
+typedef duk_uint_t (*duk_unity_debug_peek_function) (duk_int_t udata);
+typedef void (*duk_unity_debug_read_flush_function) (duk_int_t udata);
+typedef void (*duk_unity_debug_write_flush_function) (duk_int_t udata);
+typedef duk_idx_t (*duk_unity_debug_request_function) (duk_context *ctx, duk_int_t udata, duk_idx_t nvalues);
+typedef void (*duk_unity_debug_detached_function) (duk_context *ctx, duk_int_t udata);
 
-DUK_INTERNAL_DECL void duk_trans_socket_init(void);
-DUK_INTERNAL_DECL void duk_trans_socket_finish(void);
-DUK_INTERNAL_DECL void duk_trans_socket_waitconn(void);
-DUK_INTERNAL_DECL duk_size_t duk_trans_socket_read_cb(void *udata, char *buffer, duk_size_t length);
-DUK_INTERNAL_DECL duk_size_t duk_trans_socket_write_cb(void *udata, const char *buffer, duk_size_t length);
-DUK_INTERNAL_DECL duk_size_t duk_trans_socket_peek_cb(void *udata);
-DUK_INTERNAL_DECL void duk_trans_socket_read_flush_cb(void *udata);
-DUK_INTERNAL_DECL void duk_trans_socket_write_flush_cb(void *udata);
+DUK_EXTERNAL_DECL void *duk_unity_attch_debugger(duk_context *ctx, 
+                                           duk_unity_debug_read_function read_cb, 
+                                           duk_unity_debug_write_function write_cb, 
+                                           duk_unity_debug_peek_function peek_cb, 
+                                           duk_unity_debug_read_flush_function read_flush_cb,
+                                           duk_unity_debug_write_flush_function write_flush_cb,
+                                           duk_unity_debug_request_function request_cb,
+                                           duk_unity_debug_detached_function detached_cb, 
+										   duk_int_t udata);
+DUK_EXTERNAL_DECL void duk_unity_detach_debugger(duk_context *ctx, void *debugger);
 
 /*
  *  C++ name mangling
