--- a/unity/.vscode/launch.json
+++ b/unity/.vscode/launch.json
@@ -5,6 +5,37 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Unity Editor",
+            "type": "unity",
+            "path": "/d:/julio/projects/github.com/ialex32x/duktape-unity/unity/Library/EditorInstance.json",
+            "request": "launch"
+        },
+        {
+            "name": "Windows Player",
+            "type": "unity",
+            "request": "launch"
+        },
+        {
+            "name": "OSX Player",
+            "type": "unity",
+            "request": "launch"
+        },
+        {
+            "name": "Linux Player",
+            "type": "unity",
+            "request": "launch"
+        },
+        {
+            "name": "iOS Player",
+            "type": "unity",
+            "request": "launch"
+        },
+        {
+            "name": "Android Player",
+            "type": "unity",
+            "request": "launch"
+        },
+        {
             "name": "Skritt Debugger",
             "type": "skritt-debugger",
             "request": "attach",
