--- a/duktape-2.3.0/src-input/duktape.h.in
+++ b/duktape-2.3.0/src-input/duktape.h.in
@@ -1325,16 +1325,16 @@ DUK_EXTERNAL_DECL void *duk_unity_to_buffer_raw(duk_context *ctx, duk_idx_t idx,
 DUK_EXTERNAL_DECL void *duk_unity_get_buffer(duk_context *ctx, duk_idx_t idx, duk_uint_t *out_size);
 DUK_EXTERNAL_DECL void *duk_unity_get_buffer_data(duk_context *ctx, duk_idx_t idx, duk_uint_t *out_size);
 
-DUK_EXTERNAL_DECL void duk_unity_push2i(duk_context *ctx, duk_int_t v1, duk_int_t v2);
-DUK_EXTERNAL_DECL void duk_unity_push3i(duk_context *ctx, duk_int_t v1, duk_int_t v2, duk_int_t v3);
-DUK_EXTERNAL_DECL void duk_unity_push4i(duk_context *ctx, duk_int_t v1, duk_int_t v2, duk_int_t v3, duk_int_t v4);
+DUK_EXTERNAL_DECL void duk_unity_put2i(duk_context *ctx, duk_int_t v1, duk_int_t v2);
+DUK_EXTERNAL_DECL void duk_unity_put3i(duk_context *ctx, duk_int_t v1, duk_int_t v2, duk_int_t v3);
+DUK_EXTERNAL_DECL void duk_unity_put4i(duk_context *ctx, duk_int_t v1, duk_int_t v2, duk_int_t v3, duk_int_t v4);
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get2i(duk_context *ctx, duk_idx_t idx, duk_int_t *v1, duk_int_t *v2);
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get3i(duk_context *ctx, duk_idx_t idx, duk_int_t *v1, duk_int_t *v2, duk_int_t *v3);
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get4i(duk_context *ctx, duk_idx_t idx, duk_int_t *v1, duk_int_t *v2, duk_int_t *v3, duk_int_t *v4);
 
-DUK_EXTERNAL_DECL void duk_unity_push2f(duk_context *ctx, float v1, float v2);
-DUK_EXTERNAL_DECL void duk_unity_push3f(duk_context *ctx, float v1, float v2, float v3);
-DUK_EXTERNAL_DECL void duk_unity_push4f(duk_context *ctx, float v1, float v2, float v3, float v4);
+DUK_EXTERNAL_DECL void duk_unity_put2f(duk_context *ctx, float v1, float v2);
+DUK_EXTERNAL_DECL void duk_unity_put3f(duk_context *ctx, float v1, float v2, float v3);
+DUK_EXTERNAL_DECL void duk_unity_put4f(duk_context *ctx, float v1, float v2, float v3, float v4);
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get2f(duk_context *ctx, duk_idx_t idx, float *v1, float *v2);
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get3f(duk_context *ctx, duk_idx_t idx, float *v1, float *v2, float *v3);
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get4f(duk_context *ctx, duk_idx_t idx, float *v1, float *v2, float *v3, float *v4);
