--- a/unity/tsconfig.json
+++ b/unity/tsconfig.json
@@ -11,7 +11,7 @@
         ],
         "moduleResolution": "node",
         "types": [
-            // "node"
+            "node"
         ],
         // "listEmittedFiles": true,
         "noImplicitAny": false,
