--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,11 @@ include_directories(${DUKTAPE_SRC_DIR})
 include_directories(${LIBRWS_DIR})
 aux_source_directory(${DUKTAPE_SRC_DIR} DUKTAPE_SRCS)
 
-IF(CMAKE_CL_64)
-    link_directories(${TOP_DIR}/build/librws/x64/Release)
-ELSE()
-    link_directories(${TOP_DIR}/build/librws/x86/Release)
-ENDIF()
+#IF(CMAKE_CL_64)
+#    link_directories(${TOP_DIR}/build/librws/x64/Release)
+#ELSE()
+#    link_directories(${TOP_DIR}/build/librws/x86/Release)
+#ENDIF()
 
 if (APPLE) 
     if (IOS)
@@ -31,4 +31,4 @@ else ()
     add_library(duktape SHARED ${DUKTAPE_SRCS})
 endif ()
 
-target_link_libraries(duktape librws_static.lib)
+#target_link_libraries(duktape librws_static.lib)
