codegen: duk_match_types

--- a/unity/.vscode/settings.json
+++ b/unity/.vscode/settings.json
@@ -50,7 +50,7 @@
         "obj/":true,
         "Obj/":true,
         "ProjectSettings/":false,
-        "temp/":true,
-        "Temp/":true
+        "temp/":false,
+        "Temp/":false
     }
 }
