codegen: 可以生成没有编译错误的 UnityEngine.Core 模块绑定

--- a/unity/.gitignore
+++ b/unity/.gitignore
@@ -2,8 +2,8 @@
 # Assets/StreamingAssets/AssetBundles.meta
 /Assets/Source/Generated
 /Assets/Source/Generated.meta
-# /Assets/Duktape/Generated
-# /Assets/Duktape/Generated.meta
+/Assets/Duktape/Generated
+/Assets/Duktape/Generated.meta
 
 # AssetBundles/
 /Library/
