--- a/unity/.vscode/launch.json
+++ b/unity/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "Unity Editor",
             "type": "unity",
-            "path": "/d:/julio/projects/github.com/ialex32x/duktape-unity/unity/Library/EditorInstance.json",
+            "path": "${workspaceRoot}/Library/EditorInstance.json",
             "request": "launch"
         },
         {
