--- a/duktape-2.3.0/src-input/duktape.h.in
+++ b/duktape-2.3.0/src-input/duktape.h.in
@@ -1339,6 +1339,13 @@ DUK_EXTERNAL_DECL duk_bool_t duk_unity_get2f(duk_context *ctx, duk_idx_t idx, fl
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get3f(duk_context *ctx, duk_idx_t idx, float *v1, float *v2, float *v3);
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get4f(duk_context *ctx, duk_idx_t idx, float *v1, float *v2, float *v3, float *v4);
 
+DUK_EXTERNAL_DECL void duk_unity_put2d(duk_context *ctx, double v1, double v2);
+DUK_EXTERNAL_DECL void duk_unity_put3d(duk_context *ctx, double v1, double v2, double v3);
+DUK_EXTERNAL_DECL void duk_unity_put4d(duk_context *ctx, double v1, double v2, double v3, double v4);
+DUK_EXTERNAL_DECL duk_bool_t duk_unity_get2d(duk_context *ctx, duk_idx_t idx, double *v1, double *v2);
+DUK_EXTERNAL_DECL duk_bool_t duk_unity_get3d(duk_context *ctx, duk_idx_t idx, double *v1, double *v2, double *v3);
+DUK_EXTERNAL_DECL duk_bool_t duk_unity_get4d(duk_context *ctx, duk_idx_t idx, double *v1, double *v2, double *v3, double *v4);
+
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_set_prop_i(duk_context *ctx, duk_idx_t idx, const char *key, duk_int_t val);
 
 DUK_EXTERNAL_DECL void duk_unity_open(duk_context *ctx);
