--- a/duktape-2.3.0/src-input/duktape.h.in
+++ b/duktape-2.3.0/src-input/duktape.h.in
@@ -1346,7 +1346,12 @@ DUK_EXTERNAL_DECL duk_bool_t duk_unity_get2d(duk_context *ctx, duk_idx_t idx, do
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get3d(duk_context *ctx, duk_idx_t idx, double *v1, double *v2, double *v3);
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get4d(duk_context *ctx, duk_idx_t idx, double *v1, double *v2, double *v3, double *v4);
 
-DUK_EXTERNAL_DECL void duk_unity_push_vector3(duk_context *ctx, float v1, float v2, float v3);
+// DUK_EXTERNAL_DECL void duk_unity_push_vector2i(duk_context *ctx, duk_int_t x, duk_int_t y);
+// DUK_EXTERNAL_DECL void duk_unity_push_vector3i(duk_context *ctx, duk_int_t x, duk_int_t y, duk_int_t z);
+DUK_EXTERNAL_DECL void duk_unity_push_vector2(duk_context *ctx, float x, float y);
+DUK_EXTERNAL_DECL void duk_unity_push_vector3(duk_context *ctx, float x, float y, float z);
+DUK_EXTERNAL_DECL void duk_unity_push_quaternion(duk_context *ctx, float x, float y, float z, float w);
+DUK_EXTERNAL_DECL void duk_unity_push_color(duk_context *ctx, float r, float g, float b, float a);
 
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_set_prop_i(duk_context *ctx, duk_idx_t idx, const char *key, duk_int_t val);
 
