--- a/duktape-2.3.0/src-input/duktape.h.in
+++ b/duktape-2.3.0/src-input/duktape.h.in
@@ -1359,8 +1359,8 @@ DUK_EXTERNAL_DECL duk_bool_t duk_unity_put_target_i(duk_context *ctx, duk_idx_t 
 
 DUK_EXTERNAL_DECL void duk_unity_open(duk_context *ctx);
 
-DUK_EXTERNAL_DECL void duk_builtins_reg_put(duk_context *ctx, const char *key);
-DUK_EXTERNAL_DECL void duk_builtins_reg_get(duk_context *ctx, const char *key);
+DUK_EXTERNAL_DECL void duk_builtins_reg_put(duk_context *ctx, duk_uarridx_t key);
+DUK_EXTERNAL_DECL void duk_builtins_reg_get(duk_context *ctx, duk_uarridx_t key);
 
 DUK_EXTERNAL_DECL duk_uint_t duk_unity_ref(duk_context *ctx); /// Creates and returns a reference for the object at the top of the stack (and pops the object).
 DUK_EXTERNAL_DECL void duk_unity_unref(duk_context *ctx, duk_uint_t refid); /// push object referenced by refid to top of the stack
