--- a/duktape-2.3.0/src-input/duktape.h.in
+++ b/duktape-2.3.0/src-input/duktape.h.in
@@ -1346,6 +1346,9 @@ DUK_EXTERNAL_DECL duk_bool_t duk_unity_get2d(duk_context *ctx, duk_idx_t idx, do
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get3d(duk_context *ctx, duk_idx_t idx, double *v1, double *v2, double *v3);
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get4d(duk_context *ctx, duk_idx_t idx, double *v1, double *v2, double *v3, double *v4);
 
+DUK_EXTERNAL_DECL void duk_unity_put4x4f(duk_context *ctx, duk_idx_t idx, const float *c1, const float *c2, const float *c3, const float *c4);
+DUK_EXTERNAL_DECL duk_bool_t duk_unity_get4x4f(duk_context *ctx, duk_idx_t idx, float *c1, float *c2, float *c3, float *c4);
+
 // DUK_EXTERNAL_DECL void duk_unity_push_vector2i(duk_context *ctx, duk_int_t x, duk_int_t y);
 // DUK_EXTERNAL_DECL void duk_unity_push_vector3i(duk_context *ctx, duk_int_t x, duk_int_t y, duk_int_t z);
 DUK_EXTERNAL_DECL void duk_unity_push_vector2(duk_context *ctx, float x, float y);
