--- a/duktape-2.3.0/src-input/duktape.h.in
+++ b/duktape-2.3.0/src-input/duktape.h.in
@@ -1379,6 +1379,9 @@ DUK_EXTERNAL_DECL duk_idx_t duk_unity_push_error_object_raw(duk_context *ctx, du
 
 DUK_EXTERNAL_DECL duk_bool_t duk_sock_open(duk_context *ctx);
 
+// DUK_EXTERNAL_DECL void duk_unity_suspend(duk_context *ctx);
+// DUK_EXTERNAL_DECL void duk_unity_resume(duk_context *ctx);
+
 /*
  * debugger supported
  */
