export fmath to js

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,12 @@ aux_source_directory(${DUKTAPE_SRC_DIR} DUKTAPE_SRCS)
 #ENDIF()
 
 set(LIBWEBSOCKETS_DIR ${TOP_DIR}/thirdparty/libwebsockets)
+set(LIBFIXMATH_DIR ${TOP_DIR}/thirdparty/libfixmath)
 set(MBEDTLS_DIR ${TOP_DIR}/thirdparty/mbedtls)
 set(ZLIB_DIR ${TOP_DIR}/thirdparty/zlib)
+
+include_directories(${LIBFIXMATH_DIR})
+aux_source_directory(${LIBFIXMATH_DIR} LIBFIXMATH_SRCS)
 
 include_directories(${MBEDTLS_DIR}/include)
 aux_source_directory(${MBEDTLS_DIR}/library MBEDTLS_SRCS)
@@ -130,17 +134,17 @@ ENDIF ()
 
 if (APPLE) 
     if (IOS)
-        add_library(duktape STATIC ${DUKTAPE_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS})
+        add_library(duktape STATIC ${DUKTAPE_SRCS} ${LIBFIXMATH_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS})
         set(CMAKE_OSX_ARCHITECTURES "$(ARCHS_STANDARD)")
         set_property(TARGET duktape PROPERTY XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "7.0")
     else ()
-        add_library(duktape MODULE ${DUKTAPE_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS})
+        add_library(duktape MODULE ${DUKTAPE_SRCS} ${LIBFIXMATH_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS})
         set(CMAKE_OSX_ARCHITECTURES "$(ARCHS_STANDARD_64_BIT)")
         set_target_properties(duktape PROPERTIES MACOSX_BUNDLE TRUE)
         set_target_properties(duktape PROPERTIES BUNDLE TRUE)
     endif ()
 else ()
-    add_library(duktape SHARED ${DUKTAPE_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS})
+    add_library(duktape SHARED ${DUKTAPE_SRCS} ${LIBFIXMATH_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS})
 endif ()
 
 #target_link_libraries(duktape librws_static.lib)
