--- a/unity/package.json
+++ b/unity/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
-        "@types/node": "^10.12.21"
+        "@types/node": "^10.12.21",
+        "gulp": "^4.0.2"
     }
 }
