--- a/unity/tsconfig.json
+++ b/unity/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        // "module": "commonjs",
         "target": "es5",
         "sourceRoot": "Assets/Examples/Scripts/src",
-        "outDir": "Assets/Examples/Scripts/out",
-        // "outFile": "Assets/Examples/Scripts/out/code.js",
+        // "outDir": "Assets/Examples/Scripts/out",
+        "outFile": "Assets/Examples/Scripts/out/code.js",
         "typeRoots": [
             "Assets/Duktape/Typings",
             "Assets/Generated",
