with simple debugger (from duktape-example)

--- a/duktape-2.3.0/src-input/duktape.h.in
+++ b/duktape-2.3.0/src-input/duktape.h.in
@@ -1408,6 +1408,9 @@ DUK_EXTERNAL_DECL void *duk_unity_attach_debugger(duk_context *ctx,
 										   duk_int_t udata);
 DUK_EXTERNAL_DECL void duk_unity_detach_debugger(duk_context *ctx, void *debugger);
 
+DUK_EXTERNAL_DECL void *duk_example_attach_debugger(duk_context *ctx);
+DUK_EXTERNAL_DECL void duk_example_deattach_debugger(duk_context *ctx, void *debugger);
+
 /*
  *  C++ name mangling
  */
