--- a/unity/.vscode/launch.json
+++ b/unity/.vscode/launch.json
@@ -68,10 +68,10 @@
             "stopOnEntry" : true,
             "address"     : "localhost",
             "port"        : 9091,
-            "localRoot"   : "${workspaceRoot}/Assets/Examples/Scripts/out",
+            "localRoot"   : "${workspaceRoot}",
             "sourceMaps"  : false,
             "debugLog"    : true,
-            "outDir"      : "${workspaceRoot}/bin"
+            "outDir"      : null
         }
     ]
 }
