--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,12 @@ ENDIF ()
 
 set(TOP_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(DUKTAPE_DIR ${TOP_DIR}/duktape-2.4.0)
-set(DUKTAPE_SRC_DIR ${DUKTAPE_DIR}/src-custom)
+
+if (ANDROID OR IOS)
+    set(DUKTAPE_SRC_DIR ${DUKTAPE_DIR}/src-release)
+else ()
+    set(DUKTAPE_SRC_DIR ${DUKTAPE_DIR}/src-debug)
+endif ()
 
 include_directories(${DUKTAPE_SRC_DIR})
 aux_source_directory(${DUKTAPE_SRC_DIR} DUKTAPE_SRCS)
