--- a/unity/.gitignore
+++ b/unity/.gitignore
@@ -6,6 +6,8 @@
 /Assets/Source/Generated.meta
 /Assets/Duktape/Generated
 /Assets/Duktape/Generated.meta
+/Assets/AssetStoreTools
+/Assets/AssetStoreTools.meta
 
 # AssetBundles/
 /Library/
